[package]
name = "interp"
version = "0.1.0"
edition = "2021"

authors = ["Edward Hubbard <edhubbard1994@gmail.com>"] # Add this line automatically
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
uwl = "0.6.0"
sha2 = "0.9.3"
phf = "0.11.1"

